@startuml US08-DM
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

class "Ethics Committee\nMember" as EthicsCommitteeMember {
    name
    email
}

class "Political Agent" as PoliticalAgent {
    name
    email
    nationalIdentityCard
    taxIdentificationNumber
    mandateStart
    mandateEnd
}

class "Declaration of Interests" as Declaration {
    id
    submissionDate
}

enum DeclarationType {
    INITIAL
    REGULAR
    EXCEPTIONAL
}

enum DeclarationStatus {
    PENDING
    VALIDATED
    REJECTED
}

class ValidationRecord {
    validationDate
}

enum ValidationOutcome {
    VALIDATED
    RETURNED_FOR_CORRECTION
}

class ValidationComment {
    section
    comment
}

PoliticalAgent "1" -- "*" Declaration : submits

Declaration "*" -- "1" DeclarationType : classified as
Declaration "*" -- "1" DeclarationStatus : has

EthicsCommitteeMember "1" -- "*" ValidationRecord : performs

ValidationRecord "*" -- "1" Declaration : concerns
ValidationRecord "*" -- "1" ValidationOutcome : results in
ValidationRecord "1" -- "*" ValidationComment : contains

@enduml
